Fix T86859: Allow covering of Taskbar when Fullscreen from Maximized

When the window is already maximized allow covering Windows Taskbar when toggling fullscreen.

Differential Revision: https://developer.blender.org/D10811

Reviewed by Harley Acheson